# pain

./: Cargo.toml
src/: main.rs
src/mark/: mod.rs
src/piece_table/: mod.rs
src/span_table/: mod.rs
src/text_renderer/: mod.rs
