[package]
name = "editor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

 [dependencies]
 swash = "0.1.4"
 zeno = "0.2.2"
 lru = "0.6.6"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf"]
